# POO2020N

./: .gitignore  README.md
AV1/p1/1 copy/: main.cpp  ponto.cpp
AV1/p1/1.1/: circulo.h  listaDeCirculos.cpp  listaDeCirculos.h  main.cpp  ponto.cpp
AV1/p1/3/: circulo.h
AV1/p1/4.1/: circulo.h
AV1/p1/4.2/: circulo.cpp  circulo.h  ponto.cpp
AV1/p1/4.3/: circulo.cpp  ponto.cpp
AV1/p2/: conta_bancaria.cpp  conta_bancaria.h  teste_conta_bancaria  teste_conta_bancaria.cpp
S01/: test.cpp
S02/expressoes/11.separacao/: separacao.cpp
S02/expressoes/12/: foraninhado.cpp
S02/funcoes/: README.md  respostas.txt
S03/arranjos/: README.md
S03/arranjos/5.bissexto/: CMakeLists.txt  README.md
S03/arranjos/5.bissexto/include/: bissexto.h
S03/arranjos/5.bissexto/src/: bissexto.cpp  main.cpp
S04/: README.md
S04/0.Respostas/: Respostas.lof  Respostas.tex  RespostasOrdenacao.tex  RespostasOrdenacaoBolhay.tex  RespostasOrdenacaoInsert.tex
S04/1.dupeliminate/: README.md  diadoano  makefile
S04/2.arranjo/: README.md
S04/extra/: ordena.cpp  ordena2.cpp  ordena3.cpp  ordena4.cpp  ordena_ArthurBurlet.cpp  ordenacao
S05/0.Respostas/: Respostas.tex
S05/1.ponto/: ponto  ponto.cpp
S05/2.aluno/: aluno  aluno.cpp
S05/3.vendas/: vendas.cpp
S11/1.ponto/: ponto.cpp
S11/2.circulo/: circulo.cpp  circulo2.cpp
S11/3.conta_bancaria/: conta_bancaria.cpp
Testes/: sum.cpp
Testes/cuda1/: add
av1/1 copy/: circulo.cpp  ponto.h
av1/1.1/: circulo.cpp  ponto.h
av1/4/: circulo.cpp
av1/4.2/: main.cpp
av1/4.3/: circulo.h
funcoes/: simples.cpp  simples6k1
(+96 files in other folders)
